--- a/tutorial/src/performance.Rmd
+++ b/tutorial/src/performance.Rmd
@@ -1,5 +1,4 @@
 # Evaluating Learner Performance
-
 The quality of the predictions of a model in [%mlr] can be assessed with respect to a
 number of different performance measures.
 In order to calculate the performance measures, call [&performance] on the object
@@ -7,18 +6,17 @@ returned by [predict](&predict.WrappedModel) and specify the desired performance
 
 
 ## Available performance measures
-
 [%mlr] provides a large number of performance measures for all types of learning problems.
-Typical performance measures for *classification* are the mean misclassification error ([&mmce]),
-accuracy ([&acc]) or measures based on [ROC analysis](roc_analysis.md).
-For *regression* the mean of squared errors ([&mse]) or mean of absolute errors ([&mae])
+Typical performance measures for *classification* are the mean misclassification error ([mmce](&measures)),
+accuracy ([acc](&measures)) or measures based on [ROC analysis](roc_analysis.md).
+For *regression* the mean of squared errors ([mse](&measures)) or mean of absolute errors ([mae](&measures))
 are usually considered.
-For *clustering* tasks, measures such as the Dunn index ([&dunn]) are provided,
-while for *survival* predictions, the Concordance Index ([&cindex]) is
+For *clustering* tasks, measures such as the Dunn index ([dunn](&measures)) are provided,
+while for *survival* predictions, the Concordance Index ([cindex](&measures)) is
 supported, and for *cost-sensitive* predictions the misclassification penalty
-([&mcp]) and others. It is also possible to access the time to train the
-learner ([&timetrain]), the time to compute the prediction ([&timepredict]) and their
-sum ([&timeboth]) as performance measures.
+([mcp](&measures)) and others. It is also possible to access the time to train the
+learner ([timetrain](&measures)), the time to compute the prediction ([timepredict](&measures)) and their
+sum ([timeboth](&measures)) as performance measures.
 
 To see which performance measures are implemented, have a look at the
 [table of performance measures](measures.md) and the [&measures] documentation page.
@@ -27,27 +25,36 @@ If you want to implement an additional measure or include a measure with
 non-standard misclassification costs, see the section on
 [creating custom measures](create_measure.md).
 
+## Find a suitable performance measure
+The properties and requirements of the individual measures are shown in the [table of performance measures](measures.md).
 
-## Calculate performance measures
-
-In the following example we fit a [gradient boosting machine](&gbm::gbm) on a subset of the
-[BostonHousing](&mlbench::BostonHousing) data set and calculate the mean squared error
-([&mse]) on the remaining observations.
+If you would like a list of available measures with certain properties or suitable for a
+certain learning [&Task] use the function [&listMeasures].
 
 ```{r}
-n = bh.task$task.desc$size
-lrn = makeLearner("regr.gbm", n.trees = 1000)
-mod = train(lrn, task = bh.task, subset = seq(1,n,2))
-pred = predict(mod, task = bh.task, subset = seq(2,n,2))
+## Performance measures for classification with multiple classes
+listMeasures("classif", properties = "classif.multi")
+## Performance measure suitable for the iris classification task
+listMeasures(iris.task)
+```
 
+## Calculate performance measures
+In the following example we fit a [gradient boosting machine](&gbm::gbm) on a subset of the
+[BostonHousing](&mlbench::BostonHousing) data set and calculate the mean squared error
+([mse](&measures)) on the remaining observations.
+
+```{r}
+n = getTaskDescription(bh.task)$size
+lrn = makeLearner("regr.gbm", n.trees = 1000)
+mod = train(lrn, task = bh.task, subset = seq(1, n, 2))
+pred = predict(mod, task = bh.task, subset = seq(2, n, 2))
+
+# mse is the default measure for regression, we do not have to specify
+# it here
 performance(pred)
 ```
 
-For each type of learning problem, there is a default performance measure.
-For regression, the mean squared error ([&mse]) is calculated.
-
-The following code computes the median of squared errors ([&medse]) instead.
-
+The following code computes the median of squared errors ([medse](&measures)) instead.
 ```{r}
 performance(pred, measures = medse)
 ```
@@ -55,7 +62,7 @@ performance(pred, measures = medse)
 Of course, we can also calculate multiple performance measures at once by simply passing a
 list of measures which can also include [your own measure](create_measure.md).
 
-Calculate the mean squared error, median squared error and mean absolute error ([&mae]).
+Calculate the mean squared error, median squared error and mean absolute error ([mae](&measures)).
 
 ```{r}
 performance(pred, measures = list(mse, medse, mae))
@@ -66,11 +73,10 @@ works in the same way.
 
 
 ### Requirements of performance measures
-
 Note that in order to calculate some performance measures it is required that you pass the
 [&Task] or the [fitted model](&makeWrappedModel) in addition to the [&Prediction].
 
-For example in order to assess the time needed for training ([&timetrain]), the fitted
+For example in order to assess the time needed for training ([timetrain](&measures)), the fitted
 model has to be passed.
 ```{r}
 performance(pred, measures = timetrain, model = mod)
@@ -78,7 +84,7 @@ performance(pred, measures = timetrain, model = mod)
 
 For many performance measures in cluster analysis the [&Task] is required.
 ```{r}
-lrn = makeLearner("cluster.SimpleKMeans", N = 3)
+lrn = makeLearner("cluster.kmeans", centers = 3)
 mod = train(lrn, mtcars.task)
 pred = predict(mod, task = mtcars.task)
 
@@ -87,7 +93,7 @@ performance(pred, measures = dunn, task = mtcars.task)
 ```
 
 Moreover, some measures require a certain type of prediction.
-For example in binary classification in order to calculate the AUC ([&auc]) -- the area
+For example in binary classification in order to calculate the AUC ([auc](&measures)) -- the area
 under the ROC (receiver operating characteristic) curve -- we have to make sure that posterior
 probabilities are predicted.
 For more information on ROC analysis, see the section on [ROC analysis](roc_analysis.md).
@@ -101,13 +107,13 @@ performance(pred, measures = auc)
 ```
 
 Also bear in mind that many of the performance measures that are available for classification,
-e.g., the false positive rate ([&fpr]), are only suitable for binary problems.
+e.g., the false positive rate ([fpr](&measures)), are only suitable for binary problems.
 
 
 ## Access a performance measure
 
 Performance measures in [%mlr] are objects of class [Measure](&makeMeasure).
-If you are interested in the properties/requirements of a single measure you can access it directly.
+If you are interested in the properties or requirements of a single measure you can access it directly.
 See the help page of [Measure](&makeMeasure) for information on the individual slots.
 
 ```{r}
@@ -115,24 +121,7 @@ See the help page of [Measure](&makeMeasure) for information on the individual s
 str(mmce)
 ```
 
-
-## Find a suitable performance measure
-
-The properties and requirements of the individual measures are shown in the
-[table of performance measures](measures.md).
-
-If you would like a list of available measures with certain properties or suitable for a
-certain learning [&Task] use the function [&listMeasures].
-
-```{r}
-## Performance measures for classification with multiple classes
-listMeasures("classif", properties = "classif.multi")
-## Performance measure suitable for the iris classification task
-listMeasures(iris.task)
-```
-
-
-## Binary classification: Plot performance(s) versus threshold
+## Binary classification: Plot performance versus threshold
 
 As you may recall (see the previous section on [making predictions](predict.md))
 in binary classification we can adjust the threshold used to map probabilities to class labels.
