--- a/tutorial/src/parallelization.Rmd
+++ b/tutorial/src/parallelization.Rmd
@@ -18,7 +18,7 @@ parallelStop()
 ```
 
 On Linux or Mac OS X, you may want to use
-[parallelStartMulticore](&parallelMap::parallelStartMulticore) instead.
+[parallelStartMulticore](&parallelMap::parallelStart) instead.
 We offer different parallelization levels for fine grained control over the parallelization.
 E.g., if you do not want to parallelize the [&benchmark] function because it has only very few iterations but want to parallelize the [resampling](&resample) of each learner instead,
 you can specifically pass the ``level`` `"mlr.resample"` to the [parallelStart*](&parallelMap::parallelStart) function.
