All purpose caret wrapper nearly finished with rudimentary testing (Work on Issue #124)

--- a/NEWS
+++ b/NEWS
@@ -23,7 +23,7 @@ mlr_2.3:
 -- plotROCRCurves
 -- plotViperCharts
 -- measureSSE, measureMSE, measureRMSE, measureMEDSE, ...
--- PreprocWrapperPCA, PreprocWrapperICA
+-- PreprocWrapperCaret
 
 - new learners:
 -- classif.xgboost
