--- a/NEWS
+++ b/NEWS
@@ -31,6 +31,7 @@ mlr_2.3:
 -- classif.randomUniformForest
 -- classif.xgboost
 -- regr.bartMachine
+-- regr.brnn
 -- regr.cubist
 -- regr.elmNN
 -- regr.extraTrees
