--- a/NEWS
+++ b/NEWS
@@ -22,7 +22,7 @@ mlr_2.3:
   parameters
 - measures were slightly internally changed. they expose more properties (check ?Measure) and some
   now unnecessary object slots were removed
-- classif.lda now has hyperpar "predict.method"
+- classif.lda and classif.qda now have hyperpar "predict.method"
 - filerFeatures and makeFilterWrapper gain an argument for mandatory features
 
 - new functions
