fix for integrated learners: adept to new package spec / remove preceeding ! or _

--- a/tutorial/src/integrated_learners.Rmd
+++ b/tutorial/src/integrated_learners.Rmd
@@ -36,7 +36,7 @@ getTab = function(type) {
     lrn = lrns[[i]]
     df[i, 1] = paste0("**",lrn$id,"** <br />", cn(lrn$short.name))
     df[i, 2] = cn(lrn$name)
-    df[i, 3] = linkPkg(lrn$package)
+    df[i, 3] = linkPkg(mlr:::cleanupPackageNames(lrn$package))
     df[i, 4] = hasProperties(lrn, "numerics")
     df[i, 5] = hasProperties(lrn, "factors")
     df[i, 6] = hasProperties(lrn, "missings")
